--- a/package.json
+++ b/package.json
@@ -11,7 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "firebase-admin": "^11.0.0",
+    "knex": "^2.1.0",
+    "mongodb": "^4.8.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.18"
   }
 }
